# thirtyfour_macrotrends_margin

./: .gitignore  Cargo.toml  READ_ME.md  Rust Playground.html  foo_Out.js  iframe_soucre.js  web_page.html
examples/: format_output.sh  selenium_example.rs  selenium_example_three.rs  selenium_example_two.rs  thirtyfour_get_margin_data_twenty.rs  thirtyfour_get_margin_data_twenty_eight.rs  thirtyfour_get_margin_data_twenty_eightteen.rs  thirtyfour_get_margin_data_twenty_eleven.rs  thirtyfour_get_margin_data_twenty_five.rs  thirtyfour_get_margin_data_twenty_fiveteen.rs  thirtyfour_get_margin_data_twenty_four.rs  thirtyfour_get_margin_data_twenty_nine.rs  thirtyfour_get_margin_data_twenty_seven.rs  thirtyfour_get_margin_data_twenty_seventeen.rs  thirtyfour_get_margin_data_twenty_six.rs  thirtyfour_get_margin_data_twenty_sixteen.rs  thirtyfour_get_margin_data_twenty_ten.rs  thirtyfour_get_margin_data_twenty_thirteen.rs  thirtyfour_get_margin_data_twenty_three.rs  thirtyfour_get_margin_data_twenty_twelve.rs  thirtyfour_get_margin_data_twenty_two.rs  thirtyfour_simple.rs
examples/old/: result_err.rs  thirtyfour_get_margin_data_eight.rs  thirtyfour_get_margin_data_eighteen.rs  thirtyfour_get_margin_data_eleven.rs  thirtyfour_get_margin_data_fifteen.rs  thirtyfour_get_margin_data_five.rs  thirtyfour_get_margin_data_four.rs  thirtyfour_get_margin_data_nine.rs  thirtyfour_get_margin_data_nineteen.rs  thirtyfour_get_margin_data_one.rs  thirtyfour_get_margin_data_second.rs  thirtyfour_get_margin_data_seven.rs  thirtyfour_get_margin_data_seventeen.rs  tokio_finviz_method_five.rs  (+6 more)
