[package]
name = "thirtyfour_macrotrends_margin"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
thirtyfour = "0.32.0"
tokio = { version = "1.38.0", features = ["full"] }
color-eyre = "0.6.3"
url = "2.5.0"
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.38"
async-recursion = "1.1.1"
serde_json = "1.0.119"
